<resources>
    <string name="app_name">SpamBlocker</string>
    <string name="setting">Settings</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="globally_enabled">Enabled</string>
    <string name="filter_pattern">Regex Pattern</string>
    <string name="number_pattern">Number Regex Pattern</string>
    <string name="particular_number_pattern">Particular Number Pattern</string>
    <string name="sms_content_pattern">Content Regex Pattern</string>
    <string name="invalid_regex_pattern">Invalid regex pattern</string>
    <string name="pattern_contain_non_printable_characters">Non printable characters found</string>
    <string name="pattern_contain_leaing_zeroes">No need to add the leading "0", they are removed before checking.</string>
    <string name="pattern_contain_leaing_plus">No need to add the leading "+", they are removed before checking.</string>
    <string name="check_balloon_for_explanation">Check the help of the \"Number Rules\" for a detailed explanation.</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="invalid_integer">Invalid integer</string>
    <string name="filter_desc">Description</string>
    <string name="apply_to_call">Apply to Call</string>
    <string name="apply_to_sms">Apply to SMS</string>
    <string name="title_add_rule">New Rule</string>
    <string name="title_edit_rule">Edit Rule</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="test">Test</string>
    <string name="save">Save</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>
    <string name="content">Content</string>
    <string name="priority">Priority</string>
    <string name="deleted_filter">(deleted rule)</string>
    <string name="apply_to">Apply to</string>
    <string name="Delete">Delete</string>
    <string name="undelete">Undelete</string>
    <string name="passed">Passed</string>
    <string name="passed_by_default">Passed by default</string>
    <string name="blocked">Blocked</string>
    <string name="from">From</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied "%s" to clipboard.</string>
    <string name="quick_copy">Quick Copy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="regex_settings">Regex Settings</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="config_text">Configuration Text</string>
    <string name="imported_successfully">Imported successfully.</string>
    <string name="import_fail">Failed to import</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="prompt_go_to_usage_permission_setting">This feature requires permission \"Usage Statistics\", it has to be manually enabled in Settings. \nOpen that Setting page? </string>
    <string name="crashed">Crashed</string>
    <string name="emergency">Emergency</string>
    <string name="contact">Contact</string>
    <string name="non_contact">Non Contact</string>
    <string name="inclusive">Inclusive</string>
    <string name="exclusive">Exclusive</string>
    <string name="label_contact_filter">Contact Filter</string>
    <string name="label_number_filter">Number Rules</string>
    <string name="label_content_filter">Message Rules</string>
    <string name="recent_app">Recent App</string>
    <string name="allow_recent_apps">Recent Apps</string>
    <string name="allow_contact">Contacts</string>
    <string name="stir">STIR</string>
    <string name="stir_include_unverified">Include Unverified</string>
    <string name="unverified">Unverified</string>
    <string name="valid">Valid</string>
    <string name="spoof">Spoof</string>
    <string name="help_stir">
        <![CDATA[
            STIR attestation requires <b>Android 11+</b> and <b>carrier support</b>. <br>
            <br>
            There are three possible attestation results: <br>
            <font color="cyan"><b>Valid</b></font> <br>
            &emsp; The call is very likely to be valid, not spoofed. <br>
            <font color="#ffa500"><b>Unverified</b></font> <br>
            &emsp; The call is not able to be validated, or STIR attestation is not supported. <br>
            <font color="#fa7f71"><b>Spoof</b></font> <br>
            &emsp; It\'s very likely to be a spoofed call. <br>
            <br>
            <br>
              - <font color="#d1c8c8"><b>Inclusive</b></font>: <br>
                  &emsp; Calls that fail this check will still be checked by other rules. <br>
                  &emsp; <font color="#ea86ff"><b>Priority: 10</b></font> <br>
              <br>
              - <font color="#fa7f71"><b>Exclusive</b></font>: <br>
                  &emsp; Calls that fail this check will be <font color="#fa7f71"><b>blocked</b></font>. <br>
                  &emsp; <font color="#ea86ff"><b>Priority: 0</b></font>
        ]]>
    </string>
    <string name="repeated_call">Repeated Call</string>
    <string name="for_particular_number">For particular number</string>
    <string name="no_match_found">No match found</string>
    <string name="help_for_particular_number">When enabled, the rule only applies when both number and content match</string>
    <string name="help_globally_enabled">
        <![CDATA[
        The global switch, this app only works when this is turned on,
        a quick way to temporarily disable all the filters,
        turn it off when you are waiting for some particular call/message.
        ]]>
    </string>
    <string name="help_contact">
        <![CDATA[
        When enabled, calls/texts from contacts are always permitted. <br>
        <br>
          - <font color="#d1c8c8"><b>Inclusive</b></font>: <br>
              &emsp; Non-contact numbers will be checked by other rules. <br>
              &emsp; <font color="#ea86ff"><b>Priority: 10</b></font> <br>
          <br>
          - <font color="#fa7f71"><b>Exclusive</b></font>: <br>
              &emsp; Non-contact numbers will be <font color="#fa7f71"><b>blocked</b></font>. <br>
              &emsp; Equivalent to <font color="#d1c8c8"><b>Inclusive</b></font> with a number rule <font color="#fa7f71"><b>.*</b></font>. <br>
              &emsp; <font color="#ea86ff"><b>Priority: 0</b></font> <br>
        <br>
        It applies to both calls and SMS messages.
        ]]>
    </string>
    <string name="help_repeated_call">
        <![CDATA[
        Permit if the call is repeated within a period of time, it\'s likely to be urgent rather than spam. <br>
        <br>
        Receiving text message from the same number also counts, this depends on whether the READ_SMS permission is granted, which is optional.<br>
        <br>
        The default setting <font color="cyan"><b>1 Time / 5 Min</b></font> means the second call within 5 minutes will be permitted. <br>
        <br>
        Only applies for calls, <b>not</b> for text messages. <br>
        <br>
        <font color="#ea86ff"><b>Priority: 10</b></font>
        ]]>
    </string>
    <string name="help_dialed">
        <![CDATA[
        Corresponding to the \"Repeated Call\" that handles the incoming call/message, this feature handles the outgoing. <br>
        <br>
        Sending message also counts, this only works when READ_SMS permission is granted. <br>
        <br>
        The default setting <font color="cyan"><b>3 Days</b></font> means if a number has been made outgoing calls or sent messages within the past 3 days, calls from that number will be allowed, even if this number is not in contacts.<br>
        <br>
        Only applies for calls, <b>not</b> for text messages. <br>
        <br>
        <font color="#ea86ff"><b>Priority: 10</b></font>
        ]]>
    </string>
    <string name="help_recent_apps">
        <![CDATA[
        Any incoming call will pass if any app in the list has been used recently.<br>
        <br>
        A typical use case:<br>
        &emsp; You just ordered a pizza in PizzaApp, soon they call you to refund because they are closing. That call would pass if PizzaApp is enabled here. <br>
        <br>
        The default setting <font color="cyan"><b>5 Min</b></font> means any call will be permitted if any of these apps has been used within 5 minutes, by \"used\" it means either being activated, deactivated, minimized, or killed. <br>
        <br>
        Only applies for calls, <b>not</b> for text messages. <br>
        <br>
        <font color="#ea86ff"><b>Priority: 10</b></font> <br>
        ]]>
    </string>
    <string name="help_silence_call">
        <![CDATA[
        When enabled, <font color="#fa7f71"><b>blocked</b></font> calls will ring <b>silently</b> in the background instead of being hung off immediately, giving the impression to the caller that you are just busy and have not answered that call.<br>
        <br>
        By <b>silently</b> it means there is no dialer screen displayed when the phone is in use, and it does not wake up the phone when the screen is locked.
        ]]>
    </string>
    <string name="help_number_filter">
        <![CDATA[
        These rules apply to the incoming phone number.<br>
        <br>
        <font color="#ffa500"><b>Important</b></font>:<br>
        To simplify the regex,
          <font color="#fa7f71"><b>+</b></font>
          and <font color="#fa7f71"><b>spaces</b></font>
          and <font color="#fa7f71"><b>leading zeroes</b></font>
          are removed before checking, for example:<br>
        &emsp; All possible formats:<br>
        &emsp;&emsp; 123456789 &emsp;(regular number)<br>
        &emsp;&emsp; 1 2345 6789 &emsp;(with <font color="#fa7f71"><b>spaces</b></font>)<br>
        &emsp;&emsp; <font color="#fa7f71"><b>+</b></font>12 3456 789 &emsp;(with leading <font color="#fa7f71"><b>+</b></font>)<br>
        &emsp;&emsp; <font color="#fa7f71"><b>0</b></font>12 345 6789 &emsp;(with domestic trunk prefix <font color="#fa7f71"><b>0</b></font>)<br>
        &emsp;&emsp; <font color="#fa7f71"><b>00</b></font>123456789 &emsp;(two <font color="#fa7f71"><b>0</b></font>s)<br>
        &emsp; They are <b>all</b> checked as:<br>
        &emsp;&emsp; 123456789 <br>
        &emsp;So regex <font color="cyan"><b>123.*</b></font> would match <b>all</b> of them.<br>
        <br>
        The list is <b>displayed</b> in descending order of priority, ascending description, and ascending pattern. <br>
        <br>
        Uncheck the checkboxes to disable the rule, useful for testing. <br>
        <br>
        Swipe left to delete a rule.
        ]]>
    </string>
    <string name="help_sms_content_filter">
        <![CDATA[
        These rules apply to the SMS message content.<br>
        <br>
        <font color="#ffa500"><b>Note</b></font>: For SMS messages, this app works as an \"addon\" of the default SMS app, it blocks notifications instead
          of blocking messages, spam messages will still be present in the default SMS app. <font color="#fa7f71"><b>Disable</b></font> the notification of the default
          SMS app in system settings, let this app take over the notification, otherwise there will be double notifications. <br>
        <br>
        The list is <b>displayed</b> in descending order of priority, ascending description, and ascending pattern. <br>
        ]]>
    </string>
    <string name="notification">Notification</string>
    <string name="type">Type</string>
</resources>