<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_setting">

    <fragment
        android:id="@+id/navigation_call"
        android:tag="frag_tag_call"
        android:name="spam.blocker.ui.history.CallFragment"
        android:label="@string/call"
        tools:layout="@layout/call_fragment" />
    <fragment
        android:id="@+id/navigation_sms"
        android:tag="frag_tag_sms"
        android:name="spam.blocker.ui.history.SmsFragment"
        android:label="@string/sms"
        tools:layout="@layout/sms_fragment" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="spam.blocker.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/setting_fragment" />
</navigation>