<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    android:autofillHints="@string/filter_pattern"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/salmon"
            app:startIconDrawable="@drawable/ic_filter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_edit_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_pattern"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_question">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_edit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_desc"
                android:inputType="text"
                android:textColorHint="@color/hint_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/salmon"
            app:startIconDrawable="@drawable/ic_priority">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/priority"
                android:inputType="number"
                android:textColorHint="@color/hint_grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/apply_to" />

            <CheckBox
                android:id="@+id/popup_chk_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/call" />

            <CheckBox
                android:id="@+id/popup_chk_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sms" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/popup_radio_blackwhitelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/popup_radio_whitelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whitelist" />

            <RadioButton
                android:id="@+id/popup_radio_blacklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/blacklist" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_btn_save"
            style="@style/stroke_blue_button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:text="@string/save" />


    </LinearLayout>

</RelativeLayout>