<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_dialog_config_repeated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout style="@style/setting_row" >
            <TextView
                style="@style/setting_blue_label"
                android:text="@string/type"
                android:textColor="@color/hint_grey" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioGroup
                android:id="@+id/popup_radio_stir_in_exclusive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_stir_inclusive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inclusive" />

                <RadioButton
                    android:id="@+id/radio_stir_exclusive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exclusive" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/setting_row" >
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/stir_include_unverified" />
            <Space style="@style/setting_spacing" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_stir_include_unverified"
                style="@style/setting_switch" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_stir_btn_save"
            style="@style/setting_stroke_blue_button"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="end"
            android:text="@string/save" />

    </LinearLayout>
</RelativeLayout>
