<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/material_input_layout"
            android:id="@+id/container_pattern"
            app:startIconDrawable="@drawable/ic_filter">

            <com.google.android.material.textfield.TextInputEditText
                style = "@style/material_input"
                android:id="@+id/popup_edit_pattern"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- for sms only -->
        <LinearLayout style="@style/setting_row" android:id="@+id/row_sms_particular_number">
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/for_particular_number" />
            <ImageView
                android:id="@+id/popup_help_particular_number"
                style="@style/help_question_icon"
                android:background="@drawable/ic_question"
                tools:ignore="ContentDescription" />
            <Space style="@style/setting_spacing" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_particular_number"
                style="@style/setting_switch" />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/material_input_layout"
            android:id="@+id/container_pattern_phone"
            android:hint="@string/particular_number_pattern"
            app:startIconDrawable="@drawable/ic_filter">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/material_input"
                android:id="@+id/popup_edit_pattern_phone"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/material_input_layout"
            app:startIconDrawable="@drawable/ic_question">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/material_input"
                android:id="@+id/popup_edit_desc"
                android:hint="@string/filter_desc"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/material_input_layout"
            android:id="@+id/container_priority"
            app:startIconDrawable="@drawable/ic_priority">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/material_input"
                android:id="@+id/edit_priority"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/priority"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout style="@style/setting_row">
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/apply_to" />

            <ImageView
                android:id="@+id/popup_help_apply_to"
                style="@style/help_question_icon"
                android:background="@drawable/ic_question"
                tools:ignore="ContentDescription" />

            <Space style="@style/setting_spacing"/>

            <CheckBox
                android:id="@+id/popup_chk_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/call" />

            <CheckBox
                android:id="@+id/popup_chk_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sms" />

        </LinearLayout>

        <LinearLayout style="@style/setting_row"
            android:id="@+id/row_rule_type">
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/type" />

            <Space style="@style/setting_spacing" />

            <RadioGroup
                android:id="@+id/popup_radio_blackwhitelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/popup_radio_whitelist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whitelist" />

                <RadioButton
                    android:id="@+id/popup_radio_blacklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout style="@style/setting_row"
            android:id="@+id/row_importance">
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/notification" />

            <ImageView
                android:id="@+id/popup_help_importance"
                style="@style/help_question_icon"
                android:background="@drawable/ic_question"
                tools:ignore="ContentDescription" />

            <Space style="@style/setting_spacing"/>

            <Spinner
                android:id="@+id/spin_importance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/importance_list"/>
        </LinearLayout>

        <!-- schedule -->
        <LinearLayout style="@style/setting_row"
            android:id="@+id/row_schedule" >
            <TextView
                style="@style/setting_gray_label"
                android:text="@string/schedule" />

            <Space style="@style/setting_spacing"/>

            <Button
                android:id="@+id/popup_btn_schedule"
                style="@style/setting_stroke_gray_button" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_schedule"
                style="@style/setting_switch" />

        </LinearLayout>
        <LinearLayout style="@style/setting_row"
            android:id="@+id/row_weekdays" >

            <com.dpro.widgets.WeekdaysPicker
                android:id="@+id/picker_weekdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:highlight_color="@color/teal_200"
                app:weekenddarker="true"
                app:sunday_first_day="true" />
        </LinearLayout>
        <!-- schedule end -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_btn_save_filter"
            style="@style/setting_stroke_blue_button"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="end"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>